@@ -738,41 +738,6 @@ void Printer::setup()
     }
 #endif // FEATURE_TYPE_EEPROM
 
-#ifdef ANALYZER
-// Channel->pin assignments
-#if ANALYZER_CH0>=0
-    SET_OUTPUT(ANALYZER_CH0);
-#endif // ANALYZER_CH0>=0
-
-#if ANALYZER_CH1>=0
-    SET_OUTPUT(ANALYZER_CH1);
-#endif // ANALYZER_CH1>=0
-
-#if ANALYZER_CH2>=0
-    SET_OUTPUT(ANALYZER_CH2);
-#endif // ANALYZER_CH2>=0
-
-#if ANALYZER_CH3>=0
-    SET_OUTPUT(ANALYZER_CH3);
-#endif // ANALYZER_CH3>=0
-
-#if ANALYZER_CH4>=0
-    SET_OUTPUT(ANALYZER_CH4);
-#endif // ANALYZER_CH4>=0
-
-#if ANALYZER_CH5>=0
-    SET_OUTPUT(ANALYZER_CH5);
-#endif // ANALYZER_CH5>=0
-
-#if ANALYZER_CH6>=0
-    SET_OUTPUT(ANALYZER_CH6);
-#endif // ANALYZER_CH6>=0
-
-#if ANALYZER_CH7>=0
-    SET_OUTPUT(ANALYZER_CH7);
-#endif // ANALYZER_CH7>=0
-#endif // ANALYZER
-
 #if defined(ENABLE_POWER_ON_STARTUP) && PS_ON_PIN>-1
     SET_OUTPUT(PS_ON_PIN); //GND
     WRITE(PS_ON_PIN, (POWER_INVERTING ? HIGH : LOW));
